2003-08-27  Don Allingham  <dallingham@users.sourceforge.net>
	* src/FamilyView.py: don't add columns to family view items
	if they have already be added.

2003-08-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps_main.py: reinitialize interface after preferences
	has been clicked.

2003-08-26  Alex Roitman  <shura@alex.neuro.umn.edu>
	* NEWS: Bring up to date.
	* TODO: Likewise. 

2003-08-25  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps.glade: Minor cleanups for the alternate family view. 
	* src/gramps_main.py: Likewise.

2003-08-25  Don Allingham  <dallingham@users.sourceforge.net>
	* src/gramps.glade: move alternate family view tab, assign a
	few object names
	* src/FamlyView.py: handle alternate family view
	* src/preferences.glade: allow user to choose family view
	* src/GrampsCfg.py: allow user to choose family view
	* src/gramps_main.py: allow user to choose family view

2003-08-25  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/gramps.glade: Add Alternative Family View tab. 
	* src/PedView.py (PedigreeView.__init__): Add parent argument to the
	constructor. Connect to the handling function on button press over the
	canvas to enable context menu; 
	(on_canvas_press, build_nav_menu): Add functions to enable context menu.
	* src/gramps_main.py (init_interface): Call PedView with self as parent;
	(set_buttons,change_active_person): Fix enabling the buttons. 
	* src/PlaceView.py (merge): Change error message from people to places.
	* src/docgen/OpenOfficeDoc.py (open): Typos.
	* src/plugins/AncestorChart.py: Change from TextDoc and DrawDoc to
	BaseDoc. Enable Book item functionality. 
	* src/plugins/SimpleBookTitle.py: Change from TextDoc to BaseDoc.
	* src/plugins/BookReport.py: Likewise.
	* src/plugins/FtmStyleDescendants.py: Likewise.

2003-08-24  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/FanChart.py: remove print statement
	* src/docgen/RTFDoc.py: change from TextDoc to BaseDoc